syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message Calculator {
  int32 firstNumber = 1;
  int32 secondNumber = 2;
}

message CalculatorRequest {
  Calculator calculator = 1;
}

message CalculatorResponse {
  int32 sum = 1;
}

message PrimeNumberDecompositionRequest {
  int64  number = 1;
}

message PrimeNumberDecompositionResponse {
  int64 prime_factor = 1;
}

message ComputeAverageRequest{
  int32 number = 1;
}

message ComputeAverageResponse{
  double average = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse{
  double number_root = 1;
}

service CalculatorService {
  rpc Calculator(CalculatorRequest) returns(CalculatorResponse) {};

  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest)
      returns(stream PrimeNumberDecompositionResponse) {};

  rpc ComputeAverage(stream ComputeAverageRequest) returns(ComputeAverageResponse) {};

  //Error Handling
  //This RPC will throw an exception if the sent number is negative
  //The error being sent is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns(SquareRootResponse){};
}